# rust-pg-backend

./: .env  Cargo.toml  README.md  docker-compose.yml
migrations/2023-06-30-200013_create_products/: up.sql
migrations/2023-07-01-162518_add_parts/: down.sql  up.sql
src/: app_config.rs  db.rs  http_exception.rs  lib.rs  main.rs  models.rs  schema.rs
src/handlers/: parts.rs  products.rs
src/ops/: mod.rs  part.rs  product.rs
