[package]
name = "rust-backend"
version = "1.0.0"
edition = "2021"

[dependencies]
actix-web = { version = "4", features = ["openssl"] }
env_logger = "0.9"
serde = { version = "^1.0", features = ["derive"] }
serde_json = "1.0.39"
derive_more = "0.99.0"
diesel = { version = "2.1.0", features = ["postgres"] }
dotenvy = "0.15"